<resources>
    <string name="app_name">e学友</string>
    <string name="action_settings">Settings</string>
    <string name="movie_activity_title">电影推荐</string>
    <string name="Loading">加载中</string>
    <string name="Poster">电影海报</string>
    <string name="homework_edit_text">编辑作业</string>
    <string name="homework_edit_subject_text">课程名称</string>
    <string name="homework_edit_deadline_text">截止日期</string>
    <string name="homework_edit_description">描述</string>
    <string name="homework_edit_submit_text">确定</string>
    <string name="homework_activity_title">作业列表</string>
    <string name="homework_edit_delete">删除</string>
    <string name="homework_notify_title">作业提醒</string>
    <string name="homework_notify_desc">有临近截止日期的作业</string>
    <string name="attentive_time_total">总计专注时间</string>
    <string name="attentive_time_lastweek">过去7天</string>
</resources>
